input, alignment fix ups

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -52,17 +52,30 @@ nav a{
   width: 25vw;
   margin: 2%;
   border-radius:10px;
-  padding:1.5%;
+  /* padding:1.5%; */
   /* padding-top:0.5%; */
   text-align:left;
 /*   */
 /*  #dadada */
 }
+h1{
+  font-size: 20px;
+  margin-bottom:0;
+}
+h2{
+  font-size: 15px;
+  margin-top:0;
+}
+h3{
+  font-size: 13px;
+  opacity:0.7;
+}
+
 .mainBox{
   /* padding:.5%; */
   /* margin: 2%; */
   padding:0;
-  margin:0;
+  margin:5%;
 }
 .box {
   background-color: #353535;
@@ -81,6 +94,68 @@ nav a{
 }
 .smallerBox{
   background-color:#323232;
+  padding: 2% 5%;
+  /* display: inline-flex;
+  display: -webkit-inline-flex; */
+  display:block;
+}
+form input{
+  color:#ffffff;
+  background-color: #353535;
+}
+#search {
+  width: 80%;
+  /* height: 35px; */
+  border:none;
+  font-size:14px;
+  border-radius:20px 0px 0px 20px;
+  padding:10px 5px 10px 15px;
+  color:#ffffff;
+}
+#submit {
+  width: 14%;
+  border:none;
+  background-color:#444444;
+  color:#ffffff;
+  padding: 14px 15px 11.5px 8px;
+  border-radius: 0px 20px 20px 0px;
+  font-size: 10px;
+  font-weight:750;
+  text-align: center;
+
+  text-transform: uppercase;
+}
+
+.oval{
+  aspect-ratio: 1/1;
+  width:3vw;
+  /* height:50px; */
+  background-color:#444444;
+  border-radius:100px;
+  display:inline-block;
+  /* display: block-inline; */
+  float: left;
+  margin-right:2%;
+  margin-bottom:2vw;
+}
+.righter{
+  /* display: inline-block; */
+  /* vertical-align: top; */
+  /* background-color:yellow; */
+  /* width:90%; */
+  /* color:yellow; */
+  /* float:right; */
+}
+.righter p, .righter h4 {
+  /* display:inline-block; */
+}
+.righter h4 {
+  margin-bottom:1%;
+}
+.righter p {
+  font-size: 12px;
+  font-weight:700;
+  margin-top:0;
 }
 @keyframes App-logo-spin {
   from {
